# LogWitch

./: .gitignore  CMakeLists.txt  Dockerfile  DockerfileTests  INSTALL  INSTALL_WINDOWS.txt  README.md  buildHelper_ubuntuPackage.sh  getgitversion.cmake  version.cmake
cmake/modules/: Findlog4cplus-2.0.cmake  Findlog4cplus.cmake
debian/: control
logWitch/: CMakeLists.txt  ContextMenuManipulateHeader.cpp  ContextMenuManipulateHeader.h  FilterListView.cpp  FilterListView.h  GenerateIfo.h.in  LogEntryTableWindow.cpp  LogEntryTableWindow.h  ParserActionInterface.h  Types.h  logfileanalyser.cpp  logfileanalyser.h  logfileanalyser.ui  main.cpp
logWitch/ActionRules/: Action.cpp  Action.h  ActionDataRewriter.cpp  ActionDataRewriter.h  ActionDiscardRow.cpp  ActionDiscardRow.h  ActionDoNothing.cpp  ActionDoNothing.h  ActionParser.cpp  ActionParser.h  CMakeLists.txt  CompiledRulesStateSaver.cpp  CompiledRulesStateSaver.h  DisplayItemData.h  Expression.cpp  Expression.h  ExpressionFind.cpp  ExpressionFind.h  ExpressionMatch.cpp  ExpressionMatch.h  ExpressionOperators.cpp  ExpressionOperators.h  ExpressionParser.cpp  ExpressionParser.h  ExpressionRegEx.cpp  ExpressionRegEx.h  FilterRuleCompiled.cpp  FilterRuleCompiled.h  FilterRuleSelectionWindow.cpp  FilterRuleSelectionWindow.h  Rule.cpp  Rule.h  RuleTable.cpp  RuleTable.h  RulesTableView.h  TableModelRulesCompiled.cpp  TableModelRulesCompiled.h  ToolButtonTrashFilter.cpp  ToolButtonTrashFilter.h  ValueGetter.cpp  (+5 more)
logWitch/GUI/: DialogExportOptions.h  QuickSearchBar.cpp  QuickSearchBar.h
logWitch/GUITools/: CMakeLists.txt  EventFilterToBoostFunction.cpp  EventFilterToBoostFunction.h  GetSetStateSaver.hxx  QScrollDownTableView.cpp  QScrollDownTableView.h  SignalMultiplexer.cpp  SignalMultiplexer.h  SignalMultiplexerStateApplier.cpp  SignalMultiplexerStateApplier.h  SlotToBoostFunction.h  SynchronizedHeaderView.cpp  SynchronizedHeaderView.h  WidgetStateSaver.cpp  WidgetStateSaver.h
logWitch/Help/: CMakeLists.txt  HelpAssistant.cpp  HelpAssistant.h
logWitch/Help/HelpText/: index.html
logWitch/LogData/: CMakeLists.txt  EntryToTextFormater.h  EntryToTextFormaterDefault.h  LogEntry.cpp  LogEntry.h  LogEntryAttributeNames.cpp  LogEntryAttributeNames.h  LogEntryFactory.cpp  LogEntryFactory.h  LogEntryParser.h  LogEntryParserModelConfiguration.cpp  LogEntryParserModelConfiguration.h  LogEntryParser_Logfile.cpp  LogEntryParser_Logfile.h  LogEntryParser_LogfileLWI.cpp  LogEntryParser_LogfileLWI.h  LogEntryStreamGetter.h  NewLogEntryMessage.cpp  NewLogEntryMessage.h  ObjectCache.hxx  ParserStreamGetter.cpp  ParserStreamGetter.h  ParserStreamGetterFile.cpp  ParserStreamGetterFile.h
logWitch/LogData/test/: LogEntryStorerForTesting.cpp  LogEntryStorerForTesting.h  test_LogEntryParser_Logfile.cpp
logWitch/Models/: CMakeLists.txt  EntryFormatingModel.cpp  EntryFormatingModel.h  ExportableIfc.cpp  ExportableIfc.h  LogEntryFilter.h  LogEntryFilterChain.cpp  LogEntryFilterChain.h  LogEntryRemoveFilter.cpp  LogEntryRemoveFilter.h  LogEntryTableFilter.cpp  LogEntryTableFilter.h  LogEntryTableModel.cpp  LogEntryTableModel.h  LogEntryTableModelFileExporter.cpp  LogEntryTableModelFileExporter.h  StringCacheTreeItem.cpp  StringCacheTreeItem.h  StringCacheTreeModel.cpp  StringCacheTreeModel.h
logWitch/Plugins/LogSource/: CMakeLists.txt
logWitch/Plugins/LogSource/Interface/: LogSourcePlugin.cpp  LogSourcePlugin.h
logWitch/Plugins/LogSource/dummy/: CMakeLists.txt  DummyLogSource.cpp  DummyLogSource.h  LogEntryParser_dummy.cpp  LogEntryParser_dummy.h
logWitch/Plugins/LogSource/log4cplus/: CMakeLists.txt  EntryToTextFormaterLog4cplus.cpp  EntryToTextFormaterLog4cplus.h  Log4cplusGUIIntegration.cpp  Log4cplusGUIIntegration.h  Log4cplusVersion.h  LogEntryParser_log4cplusSocket.cpp  LogEntryParser_log4cplusSocket.h
logWitch/Plugins/LogSource/python/: CMakeLists.txt  LogEntryParser_pythonSocket.cpp  LogEntryParser_pythonSocket.h  PythonGUIIntegration.cpp  PythonGUIIntegration.h
test/: CMakeLists.txt  test_StringCacheTreeItem.cpp
