SET(LFA_PLUGIN_DUMMY_LIB_SOURCES
  DummyLogSource.cpp
  LogEntryParser_dummy.cpp
)

ADD_LIBRARY(${LFA_PLUGIN_DUMMY_LIB} SHARED ${LFA_PLUGIN_DUMMY_LIB_SOURCES})

TARGET_LINK_LIBRARIES( ${LFA_PLUGIN_DUMMY_LIB}
  ${LFA_PLUGINS_BASIC_LIB}
)

TARGET_COMPILE_DEFINITIONS(${LFA_PLUGIN_DUMMY_LIB} PRIVATE -DQT_PLUGIN)
TARGET_COMPILE_DEFINITIONS(${LFA_PLUGIN_DUMMY_LIB} PRIVATE -DQT_SHARED)

if(UNIX)
	install (TARGETS ${LFA_PLUGIN_DUMMY_LIB}
         LIBRARY DESTINATION "${LW_PLUGIN_DIR}" )
else(UNIX)
	install (TARGETS ${LFA_PLUGIN_DUMMY_LIB}
         DESTINATION "${LW_PLUGIN_DIR}" )
endif(UNIX)
