FIND_PACKAGE(log4cplus REQUIRED)

SET(LFA_PLUGIN_LOG4CPLUS_LIB_SOURCES
  EntryToTextFormaterLog4cplus.cpp
  Log4cplusGUIIntegration.cpp
  LogEntryParser_log4cplusSocket.cpp
)

ADD_LIBRARY(${LFA_PLUGIN_LOG4CPLUS_LIB} MODULE ${LFA_PLUGIN_LOG4CPLUS_LIB_SOURCES})

TARGET_LINK_LIBRARIES( ${LFA_PLUGIN_LOG4CPLUS_LIB}
  ${LFA_PLUGINS_BASIC_LIB}
  ${LOG4CPLUS_LIBRARIES}
  Qt5::Network
)

TARGET_COMPILE_DEFINITIONS(${LFA_PLUGIN_LOG4CPLUS_LIB} PRIVATE -DQT_PLUGIN)
TARGET_COMPILE_DEFINITIONS(${LFA_PLUGIN_LOG4CPLUS_LIB} PRIVATE -DQT_SHARED)

install (TARGETS ${LFA_PLUGIN_LOG4CPLUS_LIB}
         LIBRARY DESTINATION "${LW_PLUGIN_DIR}" )

IF(NOT UNIX)
  INSTALL( FILES ${LOG4CPLUS_DLL}
    DESTINATION "${LW_BINARY_DIR}" )
ENDIF()
